# columns

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  colunas.mk  errors.txt  runbuild
.circleci/: config.yml
cmake/: UnitTest.cmake
doc/: Doxyfile  Makefile  colunas.css  colunas.dox
mck/: CMakeLists.txt  Makefile  mck.mk
mck/game/: CMakeLists.txt  CanvasMock.h  InputReaderMock.h  utilgame.cpp  utilgame.h
mck/graphics/: CMakeLists.txt  WindowMock.h  utilgraphics.cpp  utilgraphics.h
mck/gui/: CMakeLists.txt  Makefile  utilgui.cpp  utilgui.h
mck/peca/: CMakeLists.txt  Makefile  utilpeca.cpp  utilpeca.h
mck/piece/: CMakeLists.txt  CreatorCycle.cpp  CreatorCycle.h  PieceCreatorCycle.cpp  PieceCreatorCycle.h  utilpeca.cpp  utilpeca.h  utilpiece.cpp  utilpiece.h
mck/score/: CMakeLists.txt  utilscore.cpp  utilscore.h
mck/state/: CMakeLists.txt  utilstate.cpp  utilstate.h
mck/util/: CMakeLists.txt  Makefile  utiltest.cpp  utiltest.h  utiltst.cpp  utiltst.h
src/: CMakeLists.txt  Makefile  src.mk
src/columns/: CMakeLists.txt  columns.cpp  columns.h
src/colunas/: CMakeLists.txt  Makefile  colunas.cpp  colunas.h
src/colunas/SDL/: CMakeLists.txt  colunas_SDL.cpp
src/game/: BoardController.cpp  BoardController.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Controller.cpp  Controller.h  GameController.cpp  GameController.h  GameControllerOld.cpp  GameControllerOld.h  InputReader.cpp  InputReader.h  MatchController.cpp  MatchController.h  Message.cpp  Message.h  Messages.cpp  Messages.h  PieceController.cpp  PieceController.h  State.cpp  State.h  StateObserver.h
src/grafico/: BoardDrawer.cpp  BoardDrawer.h  CMakeLists.txt  DesenhaTabuleiro.cpp  DesenhaTabuleiro.h  Janela.cpp  Janela.h  Makefile  Window.cpp  Window.h
src/graphics/: BoardDrawer.cpp  BoardDrawer.h  CMakeLists.txt  Drawer.h  ScoreBoardDrawer.cpp  ScoreBoardDrawer.h  Window.cpp  Window.h
src/gui/: CMakeLists.txt  Color.cpp  Color.h  Cor.cpp  Cor.h  Font.cpp  Font.h  Fonte.cpp  Fonte.h  Makefile  Point.h  Ponto.cpp  Ponto.h  Rectangle.h  Retangulo.cpp  Retangulo.h
src/input/: CMakeLists.txt
src/jogo/: BoardController.cpp  BoardController.h  CMakeLists.txt  ControladorJogo.cpp  ControladorJogo.h  ControladorTabuleiro.cpp  ControladorTabuleiro.h  GameController.cpp  GameController.h  Makefile  Mensagem.cpp  Mensagem.h  Message.cpp  Message.h  Situacao.cpp  Situacao.h  SituacaoObserver.h  State.cpp  State.h  StateObserver.h
src/peca/: Board.cpp  Board.h  CMakeLists.txt  Makefile  Peca.cpp  Peca.h  Piece.cpp  Piece.h  PiecePosition.cpp  PiecePosition.h  PosicaoPeca.cpp  PosicaoPeca.h  Tabuleiro.cpp  Tabuleiro.h  Tile.cpp  Tile.h
src/piece/: Board.cpp  Board.h  CMakeLists.txt  Creator.h  CreatorRandom.cpp  CreatorRandom.h  Piece.cpp  Piece.h  PieceCreator.h  PieceCreatorRandom.cpp  PieceCreatorRandom.h  PiecePosition.cpp  PiecePosition.h  Position.cpp  Position.h
src/pontuacao/: CMakeLists.txt  Makefile  Placar.cpp  Placar.h  Pontuacao.cpp  Pontuacao.h  Score.cpp  Score.h  ScoreBoard.cpp  ScoreBoard.h
src/score/: CMakeLists.txt  Score.cpp  Score.h  ScoreBoard.cpp  ScoreBoard.h
src/state/: CMakeLists.txt  Score.cpp  Score.h  ScoreBoard.cpp  ScoreBoard.h  State.cpp  State.h  StateObserver.h
src/util/: Aleatorio.cpp  Aleatorio.h  CMakeLists.txt  Espera.cpp  (+6 more)
test/: CMakeLists.txt
tst/: Makefile  tst.mk
(+112 files in other folders)
